# paragonic

./: .busted  .gitignore  AGENTIC_MCP_PLAN.md  AI_AGENT_COLLABORATION_SUMMARY.md  APPROVAL_CONFIGURATION_GUIDE.md  ASSOCIATION_EXTRACTION_SUMMARY.md  CHANGELOG.md  CLAUDE.md  CONTENT_TYPE_FILTERING_SUMMARY.md  CUSTOM_MARKDOWN_SOURCE_FORMATTER_SUMMARY.md  Cargo.toml  DESIGN_NOTES.md  FASTEMBED_INTEGRATION_SUMMARY.md  HUMAN_DRIVEN_LEARNING_IMPLEMENTATION_SUMMARY.md  IRAGL_VECTOR_SIMILARITY_SEARCH_SUMMARY.md  MCP_CLIENT_FEATURES_SUMMARY.md  MCP_CONVERSION_PLAN.md  MCP_IMPLEMENTATION_COMPLETE.md  MCP_IMPLEMENTATION_PLAN.md  MCP_INTEGRATION_SUMMARY.md  MCP_ONLY_CONVERSION_COMPLETE.md  MCP_ONLY_CONVERSION_PLAN.md  MCP_SAMPLING_APPROVAL_USAGE.md  MCP_SINGLE_PROTOCOL_REFORM_SPEC.md  MCP_STANDARD_IMPLEMENTATION_SUMMARY.md  MCP_TOOL_AWARENESS_IMPLEMENTATION_SUMMARY.md  MCP_TOOL_AWARENESS_PROMPTS_SPEC.md  Makefile  Makefile.old  NON_BLOCKING_STREAMING_FIX.md  PARAGONIC_CHAT_TUTORIAL.md  PATTERN_SYSTEM_INTEGRATION_SUMMARY.md  README.html  README.md  README_ASTRONVIM.md  REAL_VECTOR_SIMILARITY_SEARCH_SUMMARY.md  RELEASE_GUIDE_0.2.0.md  RELEASE_GUIDE_0.3.0.md  RELEASE_GUIDE_0.4.0.md  RELEASE_GUIDE_0.5.0.md  (+134 more)
.agent-os/product/: decisions.md  mission.md  roadmap.md  tech-stack.md
.cursor/rules/: paragonic-project.mdc
docs/: HTTP_TRANSPORT_API.md  HTTP_TRANSPORT_DOCUMENTATION.md  HUMAN_DRIVEN_LEARNING_GUIDE.md  MIGRATION_GUIDE.md
lua/paragonic/: DESIGN_CHAT.md  ai_agent.lua  api.lua  approval_config.lua  backend.lua  chat.lua  chat.lua.backup  config.lua  debug.lua  events.lua  http_client.lua  init.lua  interface_test.lua  keymaps.lua  mcp.lua  mcp_approval_ui.lua  mcp_chat_integration.lua  mcp_config.lua  mcp_http_transport.lua  mcp_model_selection.lua  mcp_owasp_security.lua  mcp_performance.lua  mcp_security.lua  mcp_thinking_support.lua  mcp_tool_prompts.lua  mcp_transport_adapter.lua  mcp_undo_integration.lua  patterns.lua  rpc.lua  rpc_bridge.lua  rpc_simple.lua  rpc_standalone.lua  rpc_test.lua  search.lua  sse_client.lua  streaming.lua  text.lua  tool_types.lua  transport.lua  ui.lua  (+1 more)
migrations/: 2024-12-19-000001_create_initial_schema.down.sql  2024-12-19-000001_create_initial_schema.sql  2025-08-01-000003_add_embeddings_system.sql
migrations/2025-08-01-000001_create_initial_schema/: down.sql  up.sql
migrations/2025-08-01-000002_add_organizational_structure/: down.sql  up.sql
migrations/2025-08-01-000003_add_embeddings_system/: down.sql  up.sql
migrations/2025-08-03-000001_add_iragl_knowledge_management/: down.sql  up.sql
migrations/2025-08-08-000001_add_system_patterns/: down.sql  up.sql
migrations/2025-08-08-000002_add_pattern_executions/: down.sql  up.sql
migrations/2025-08-08-000003_add_pattern_relationships/: down.sql  up.sql
migrations/2025-08-08-000004_add_tool_pattern_mappings/: down.sql  up.sql
migrations/2025-08-08-000005_add_pattern_learning_metrics/: down.sql  up.sql
migrations/2025-08-08-000006_update_ai_agent_sessions/: down.sql  up.sql
migrations/2025-08-17-202236_add_learning_system_schema/: down.sql  up.sql
migrations/2025-08-18-001141_update_skill_areas_to_graph_structure/: down.sql  up.sql
migrations/2025-08-18-015025_add_human_driven_learning_tables/: down.sql  up.sql
patterns/: version.json
patterns/bootstrap/: core_patterns.json  pattern_relationships.json  pattern_templates.json
patterns/templates/: session-summary.tmpl
references/: mcp-authorization.md  mcp-lifecycle.md  mcp-overview.md  mcp-progress.md  mcp-sbp.md  mcp.md  rag-optimization.md
spec/: paragonic_spec.lua
src/: config.rs  content_association_tests.rs  database.rs  embeddings.rs  embeddings_local.rs  embeddings_local_test.rs  error.rs  fulltext.rs  http_server.rs  integration_tests.rs  iragl.rs  iragl_analytics_tests.rs  iragl_database_tests.rs  iragl_database_tests.rs.bak  iragl_processor_tests.rs  iragl_search_engine_tests.rs  learning_models.rs  learning_models_tests.rs  lib.rs  main.rs  markdown_formatter.rs  models.rs  ollama.rs  operations.rs  optimization_engine_tests.rs  pattern_database_operations_tests.rs  pattern_database_tests.rs  patterns.rs  rpc.rs  rpc.rs.backup  rpc_integration_tests.rs  schema.rs  session_manager.rs  stream_manager.rs  text.rs  vector.rs
src/iragl/: analytics.rs
tests/: memory_usage_tests.rs  run_rpc_tests.lua
tests/deployment/: test_deployment_and_configuration.lua
tests/deprecated/: test_agent_file_create.lua  test_agent_file_edit.lua  test_agent_file_save.lua  test_agent_session_info.lua  test_ai_agent_actions.lua  test_ai_agent_autocommands.lua  test_ai_agent_buffer.lua  test_ai_agent_buffer_write.lua  test_ai_agent_command.lua  test_ai_agent_events.lua  test_ai_agent_events_triggering.lua  test_ai_agent_integration.lua  test_ai_agent_message.lua  test_ai_agent_receive.lua  test_ai_agent_session.lua  test_ai_agent_session_integration.lua  test_bridge_debug.lua  test_bridge_detailed.lua  test_bridge_exact.lua  (+107 more)
(+137 files in other folders)
