[package]
name = "paragonic"
version = "0.1.0"
edition = "2021"
authors = ["Paragonic Team"]
description = "Agentic Neovim Extension with Rust backend"
license = "MIT"

[dependencies]
# Core async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP client for Ollama integration
reqwest = { version = "0.12.22", features = ["json"] }

# Database
diesel = { version = "2.2.12", features = ["postgres", "chrono", "uuid", "serde_json", "r2d2", "postgres_backend"] }
diesel-derive-enum = "3.0.0-beta.1"
diesel_migrations = "2.2.0"
postgresql_embedded = "0.19.0"
r2d2 = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "2.0.12"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.15.13"
dirs = "6.0"

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Decimal handling for ISRL profiles
rust_decimal = { version = "1.0", features = ["serde"] }

# Async streaming support
futures-util = "0.3"

# Full-text search engine
tantivy = "0.24"

# CLI argument parsing (for development/testing)
clap = { version = "4.0", features = ["derive"] }

# JSON-RPC for Lua-Rust communication and MCP
tokio-jsonrpc = "0.9.1"
tokio-core = "0.1"
futures = "0.1"
tokio-io = "0.1.13"
tokio-codec = "0.1.2"

[[bin]]
name = "paragonic"
path = "src/main.rs"

[dev-dependencies]
# Testing
tokio-test = "0.4"
mockall = "0.13.1"
tempfile = "3.10"

# Test database
testcontainers = "0.25" 
